fix iframe not showing

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -56,3 +56,4 @@
   border: none !important;
   height: 3rem;
 }
+.pdfobject-container { height: 30rem; border: 1rem solid rgba(0,0,0,.1); }
